# ChangeLog for net-misc/zaptel
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.95 2007/07/13 14:51:37 gustavoz Exp $

  13 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/zaptel-1.2.18-2.6.22.diff, zaptel-1.2.18.ebuild:
  Fix to build on 2.6.22 kernels, thanks to Kai Lippok for pointing it out

*zaptel-1.2.18 (12 Jul 2007)

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/zaptel-1.2.18-gentoo.diff, +zaptel-1.2.18.ebuild:
  Verbump, fixes #182655

  27 Apr 2007; Raúl Porcel <armin76@gentoo.org> zaptel-1.2.16.ebuild:
  x86 stable wrt bug 166679

*zaptel-1.2.16 (19 Apr 2007)

  19 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/zaptel-1.2.16-gentoo.diff, +zaptel-1.2.16.ebuild:
  New version, fixes #166679 #170233

  13 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  zaptel-1.2.12-r1.ebuild:
  stable x86, security bug #169161

  07 Mar 2007; <solar@gentoo.org> zaptel-1.2.12-r1.ebuild:
  - portage defines RDEPEND=DEPEND when no RDEPEND is defined. This change
  defines RDEPEND and makes sure linux-headers are not in it as they are
  unneeded at runtime

*zaptel-1.2.12-r1 (17 Jan 2007)

  17 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +zaptel-1.2.12-r1.ebuild:
  New rev with BRIstuff-0.3.0-PRE-1x

*zaptel-1.2.12 (19 Dec 2006)

  19 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  +files/zaptel-1.2.12-gentoo.diff, +zaptel-1.2.12.ebuild:
  Version bump, this should fix bug #157009.

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  zaptel-1.2.11-r1.ebuild:
  Add libusb dep wrt #156312 (used by astribank utils)

*zaptel-1.2.11-r1 (27 Nov 2006)
*zaptel-1.2.9.1-r1 (27 Nov 2006)
*zaptel-1.0.10-r2 (27 Nov 2006)

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  -files/zaptel-1.2.10-gentoo.diff, files/zaptel.udevd,
  -zaptel-1.0.10-r1.ebuild, +zaptel-1.0.10-r2.ebuild,