@@ -91,6 +91,8 @@ DIST bristuff-0.3.0-PRE-1v.tar.gz 267644 RMD160 5c5f034d29f4156351a495f40c9c4b17
 DIST bristuff-0.3.0-PRE-1x.tar.gz 279200 RMD160 bc84aa50370627cfead9e0646cf87c16ddff7b00 SHA1 e02a82cebaefa0d666ad56532369310aae818d91 SHA256 13d98160d4a10b46b77c822577e6c64ad7dadbc2df1b4cd0a1007ae3bbbd4aa8
 DIST bristuff-0.3.0-PRE-1y-d.tar.gz 286165 RMD160 7424e3f6876ff1e9415c11d3c8ed70014c5a0f4f SHA1 cb984daf1616c847d02d4824e36e13d55a142ade SHA256 99688819bce753910b154ad0866d77f861e25842a1e810d0baf80a0a02cfef25
 DIST bristuff-0.3.0-PRE-1y-h.tar.gz 286224 RMD160 bf0b9fce76c68565837b56676262fdd055240653 SHA1 cefd78476b6e394672de27849ca4a02b81a7ef1d SHA256 5657e2a50cfe35a64d9aa8caea4c3306539ed81a4ac955a9792a5d58c471a03f
+DIST oslec-0.1-zaptel-1.2.18.diff.gz 2956 RMD160 a4b325c3c989e96459c8b8947139a64c6b909a51 SHA1 249aaebb8e21b3dc5c9304c38bbea8ced81561d8 SHA256 38d840cbe6bf2b846d75de5f977c4c0f8d413173d59180e9d39b96205a10e4d3
+DIST oslec-0.1.tar.gz 1287860 RMD160 f9689f05563b34f4fb44a518d449498d9edb8301 SHA1 bd778f2630974240fc295ad6eee21f8df67db7f7 SHA256 7a8ee97c8f79544b5b30fe509a502966f748c152ee26520f8279cb2d75ec7c38
 DIST zaphfc_0.3.0-PRE-1o_florz-12.diff.gz 10736 RMD160 b95d2301402e1108bc480ce0e66e87e3062eccf8 SHA1 f8ab2f312c6a2b2f607b9e7f3ccbcca0858c53a7 SHA256 04a8dd22d581b5d28d46a589d695f6eb634bf2bf355347a637fe2d560a63528c
 DIST zaphfc_0.3.0-PRE-1y-h_florz-12.diff.gz 10806 RMD160 34834559a99e3a52ade9ff7e9804742e9bc5260f SHA1 4e890b2ae27f3c46061e6a1f6ccd7b205470f3e2 SHA256 83d3705a55fbf265b97e37bbc45facd4f040331f6c9c1b6b98c94957e92eba11
 DIST zaptel-1.0.10.tar.gz 327832 RMD160 a797bb36f35e50c51d30705ad1d628f5728d87ed SHA1 98544260fca2afbcd304f7354b62a56138e15a09 SHA256 7978f3c56a95033bf2bc2cb8d0cb2830c5371aae21e0021503c6dbf2361795d1
@@ -119,6 +121,10 @@ EBUILD zaptel-1.2.16.ebuild 9121 RMD160 b2470ddebf0d0a875fec81c76036be783fcdff22
 MD5 30218222a79f53c31caa4551361d99e1 zaptel-1.2.16.ebuild 9121
 RMD160 b2470ddebf0d0a875fec81c76036be783fcdff22 zaptel-1.2.16.ebuild 9121
 SHA256 7b87297ebfa39603effc47c12d2aa90547bc9b7b1831e067fdcc37213054d40a zaptel-1.2.16.ebuild 9121
+EBUILD zaptel-1.2.18-r1.ebuild 11136 RMD160 557c05e5ec76e789707f182348e6da0c4307197e SHA1 2ede592875b1b558f8b1ccbe70b9a2801e76ed5e SHA256 6f70967356e69eb360d58d7478aabd9a91e054216652b8f9cbbcf1a02e023f31
+MD5 30c676dc6322fbadd6bc428dab1957fe zaptel-1.2.18-r1.ebuild 11136
+RMD160 557c05e5ec76e789707f182348e6da0c4307197e zaptel-1.2.18-r1.ebuild 11136
+SHA256 6f70967356e69eb360d58d7478aabd9a91e054216652b8f9cbbcf1a02e023f31 zaptel-1.2.18-r1.ebuild 11136
 EBUILD zaptel-1.2.18.ebuild 9347 RMD160 a88946ebcb9bcc14ab3d9540f59d48356ed3360e SHA1 f4fe77485bec278e4f05069684ca244d2b891597 SHA256 4e85e1ba8aad9e4f354a2395e2eedb4ec5b46f6d45e3d76ed9b07ff80274a1d5
 MD5 de6b3056d123c1c430d01a043dd1e2f7 zaptel-1.2.18.ebuild 9347
 RMD160 a88946ebcb9bcc14ab3d9540f59d48356ed3360e zaptel-1.2.18.ebuild 9347
@@ -127,10 +133,10 @@ EBUILD zaptel-1.2.9.1-r1.ebuild 8577 RMD160 b487dfe2f52b91b5cd5a75667a2c702bb653
 MD5 3137e2eae66b020b7ac2d239b8d4008b zaptel-1.2.9.1-r1.ebuild 8577
 RMD160 b487dfe2f52b91b5cd5a75667a2c702bb65397c5 zaptel-1.2.9.1-r1.ebuild 8577
 SHA256 36b1e47f352425665c6ed1c77ba9a53374b5bb04e8aaabd8b9483b4c377df8bd zaptel-1.2.9.1-r1.ebuild 8577
-MISC ChangeLog 18660 RMD160 bd1544dae3dff39568e199bcab7ef51e8cbe48fa SHA1 a811b0929337c1bd79cef3bfd21b931e282e80e6 SHA256 6b95fd287e879b311746ead4aa5315f0e4345cb47185e9982c586383982c580c
-MD5 73a475c2a7b45fa7055095694f8893f7 ChangeLog 18660
-RMD160 bd1544dae3dff39568e199bcab7ef51e8cbe48fa ChangeLog 18660
-SHA256 6b95fd287e879b311746ead4aa5315f0e4345cb47185e9982c586383982c580c ChangeLog 18660
+MISC ChangeLog 18837 RMD160 d35b49bb2dc3627385a3b686ccd160f4e71d9095 SHA1 d9d7c0b06cbc18e3adcbfa797cd519a663a9a6a8 SHA256 bb99ac53ac105baaf8b925718ac99d621ff159556e3766ec3110e3475f6950e3
+MD5 ffcbc81b76807fc5d3ec120c9f1e6620 ChangeLog 18837
+RMD160 d35b49bb2dc3627385a3b686ccd160f4e71d9095 ChangeLog 18837
+SHA256 bb99ac53ac105baaf8b925718ac99d621ff159556e3766ec3110e3475f6950e3 ChangeLog 18837
 MISC metadata.xml 382 RMD160 315172442a4bfaa87b855d4c421b22a2527e97b2 SHA1 7b95f41def10946742929592db1d76b7e3bb0a19 SHA256 f79d5cd273e9ecc2181e60ea226a7cb0128011d877fc7531b2df30bd5fd9ae20
 MD5 f3d5d5b8a638e7a9a83fe0eb0d94282c metadata.xml 382
 RMD160 315172442a4bfaa87b855d4c421b22a2527e97b2 metadata.xml 382
@@ -153,13 +159,16 @@ SHA256 19ce993b416dedfb32e4bc7b3fb6658ebec4143b3a4da280dddd5915b841baeb files/di
 MD5 3a766ac53e629c3ba3e0a3df5fe96945 files/digest-zaptel-1.2.18 807
 RMD160 dec2e7dcb98b876b82d9c4db11054ec3a11cf5c1 files/digest-zaptel-1.2.18 807
 SHA256 e2caf873e19e23f5d4b5517d70f16eabf3eec8a0813bdccf724138cb222adf48 files/digest-zaptel-1.2.18 807
+MD5 bec10dae935de5ac84c4d9be2de02abb files/digest-zaptel-1.2.18-r1 1307
+RMD160 ffa9175a2e00de6983e799d0da69940557b250fa files/digest-zaptel-1.2.18-r1 1307
+SHA256 3fb5e9debecd649fe0540e289131c972a0211af22e8748603b0f0a0b4f52fd45 files/digest-zaptel-1.2.18-r1 1307
 MD5 4f0bce568656b2bd56047db290089c5e files/digest-zaptel-1.2.9.1-r1 658
 RMD160 fed5eacf2bbc84ace2c5fdd4a4375d04312a761f files/digest-zaptel-1.2.9.1-r1 658
 SHA256 9322dafee7f351be55a54eec5d617e1ee98b3a32aa5cb25546bd9631ac34487f files/digest-zaptel-1.2.9.1-r1 658
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFGl5F7KRy60XGEcJIRAn9jAJ9FHEF/TJOFK/ZnRrJ3SVq/kJJkHACdFwNU
-TOt5NCQK9maOyxxMt3XQozA=
-=Ifgw
+iD8DBQFGl6JWKRy60XGEcJIRAn0/AJ0XGWKJe5MIvZTehF81RlHDaCrLMwCghIw+
+f9pw8LklSObbpC5adnPzXN0=
+=dxK+
 -----END PGP SIGNATURE-----
