@@ -1,0 +1,15 @@
+MD5 47853b0befca4b0272867151bb195b1f bristuff-0.3.0-PRE-1y-h.tar.gz 286224
+RMD160 bf0b9fce76c68565837b56676262fdd055240653 bristuff-0.3.0-PRE-1y-h.tar.gz 286224
+SHA256 5657e2a50cfe35a64d9aa8caea4c3306539ed81a4ac955a9792a5d58c471a03f bristuff-0.3.0-PRE-1y-h.tar.gz 286224
+MD5 ff827811f63e9fe0d0ea1d5c8e9a4aa1 oslec-0.1-zaptel-1.2.18.diff.gz 2956
+RMD160 a4b325c3c989e96459c8b8947139a64c6b909a51 oslec-0.1-zaptel-1.2.18.diff.gz 2956
+SHA256 38d840cbe6bf2b846d75de5f977c4c0f8d413173d59180e9d39b96205a10e4d3 oslec-0.1-zaptel-1.2.18.diff.gz 2956
+MD5 0ab5cba8b5f69dfbd7ed7f0dc5e92eda oslec-0.1.tar.gz 1287860
+RMD160 f9689f05563b34f4fb44a518d449498d9edb8301 oslec-0.1.tar.gz 1287860
+SHA256 7a8ee97c8f79544b5b30fe509a502966f748c152ee26520f8279cb2d75ec7c38 oslec-0.1.tar.gz 1287860
+MD5 cbd7d8ab0a0541aaca960d7938bebdf0 zaphfc_0.3.0-PRE-1y-h_florz-12.diff.gz 10806
+RMD160 34834559a99e3a52ade9ff7e9804742e9bc5260f zaphfc_0.3.0-PRE-1y-h_florz-12.diff.gz 10806
+SHA256 83d3705a55fbf265b97e37bbc45facd4f040331f6c9c1b6b98c94957e92eba11 zaphfc_0.3.0-PRE-1y-h_florz-12.diff.gz 10806
+MD5 393c84c04aa366a6f36e1443823902ee zaptel-1.2.18.tar.gz 3076214
+RMD160 e051b06311681c281a70c4826705b2ab315377c1 zaptel-1.2.18.tar.gz 3076214
+SHA256 c1bfd262dcb428456cf590c6740f146d409faceeba9969585d8bec4ceb376b4d zaptel-1.2.18.tar.gz 3076214
