@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/zaptel
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.95 2007/07/13 14:51:37 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.96 2007/07/13 16:03:32 gustavoz Exp $
+
+*zaptel-1.2.18-r1 (13 Jul 2007)
+
+  13 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  +zaptel-1.2.18-r1.ebuild:
+  Revbump with experimental OSLEC echo canceller see #182879
 
   13 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   +files/zaptel-1.2.18-2.6.22.diff, zaptel-1.2.18.ebuild:
